--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tabler/icons-react": "^3.26.0",
     "class-variance-authority": "^0.7.1",
@@ -37,6 +38,7 @@
     "react-icon-cloud": "^4.1.4",
     "react-resizable-panels": "^2.1.7",
     "react-router": "^7.1.1",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
