--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.469.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icon-cloud": "^4.1.4",
