--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "vite build --base=./",
+    "build": "vite build --base=./second-brain",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
